use inventory name instead of localhost

--- a/templates/answer_file.j2
+++ b/templates/answer_file.j2
@@ -14,6 +14,6 @@ Organization={{answer_file.Organization}}
 "OtherRemoteServer={{ors.Hostname}},CheckSystemConfig={{ors.CheckSystemConfig}},HostType={{ors.HostType}},Port={{ors.Port | default(10443 + loop.index)}},queued={{ors.Queued}}"
 {% endfor %}
 {% else %}
-"OtherRemoteServer=localhost,CheckSystemConfig=0,HostType=Epic database,Port=10443,queued=0"
+"OtherRemoteServer={{inventory_hostname}},CheckSystemConfig=0,HostType=Epic database,Port=10443,queued=0"
 {% endif %}
 PRDESMPRemoteHost={{answer_file.PRDESMPRemoteHost}},DRESMPRemoteHost={{answer_file.DRESMPRemoteHost}}
